# pdf-chat

./: .gitignore  README.md
backend/: .gitignore  api.py  auth.py  database.py  embedding_service.py  fhe_service.py  llm_config.py  main.py  models.py  pdf_processor.py  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Auth.tsx  EvalStats.tsx  PrivacyReport.tsx  Sidebar.tsx  chat.tsx  header.tsx
frontend/src/contexts/: AuthContext.tsx  PdfContext.tsx  PdfContextTypes.ts
frontend/src/hooks/: useAuth.ts  usePdfContext.ts
frontend/src/lib/: api.ts  contexts.ts  types.ts
