[project]
name = "backend"
version = "0.1.0"
description = "PDF-Chat with FHE-based RAG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.0.0,<4.1.0",
    "concrete-python>=2.11.0",
    "fastapi>=0.128.0",
    "google-genai>=1.0.0",
    "numpy>=1.23,<2.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pyjwt>=2.10.1",
    "pymupdf>=1.26.7",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]

